# ICAST

./: CMakeLists.txt  README.md  dictionary.json  icast.cfg  icast_idl.py  icast_type.h
example/: basic_shmem_read.cpp  basic_shmem_write.cpp  set_nice.sh  simple.cpp  simple2.cpp  simple3.cpp
include/: dictionary.hpp  icast.hpp  icast_new.hpp  icast_type.h  multicast.hpp  multicast2.hpp  multicast3.hpp  multicast_abstract.hpp  multicast_v1.hpp  multicast_v2.hpp  simple_shmem.hpp
src/: dictionary.cpp  icast copy.cpp  icast.cpp  multicast.cpp  multicast2.cpp  multicast3.cpp  multicast_v1.cpp
